--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  fpdart: ^1.1.0
+  supabase_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
