--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  cupertino_icons: ^1.0.8
+  dotted_border: ^2.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   fpdart: ^1.1.0
   get_it: ^8.0.2
+  image_picker: ^1.1.2
   supabase_flutter: ^2.8.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
