--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   fpdart: ^1.1.0
   get_it: ^8.0.2
   image_picker: ^1.1.2
+  liquid_pull_to_refresh: ^3.0.1
   supabase_flutter: ^2.8.0
   uuid: ^4.5.1
 
